--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,10 +59,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="当前项目:"
-                            android:textSize="25sp"
+                            android:textSize="22sp"
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tv_project_name"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
@@ -86,7 +87,7 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="150dp"
+                            android:layout_width="140dp"
                             android:layout_height="70dp"
                             android:background="@drawable/complete_background"
                             android:gravity="center"
@@ -112,9 +113,9 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="150dp"
+                            android:layout_width="140dp"
                             android:layout_height="70dp"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginLeft="20dp"
                             android:background="@drawable/imcomplete_background"
                             android:gravity="center"
                             android:orientation="vertical">
@@ -184,35 +185,38 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
-                            android:layout_weight="2"
+                            android:layout_weight="3"
                             android:gravity="left"
                             android:text="项目"
                             android:textColor="@color/black"
-                            android:textSize="20sp" />
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
-                            android:layout_weight="1"
+                            android:layout_weight="2"
+                            android:gravity="center"
                             android:text="已办任务"
                             android:textColor="#8FBC8F"
-                            android:textSize="20sp" />
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
-                            android:layout_weight="1"
+                            android:layout_weight="2"
+                            android:gravity="center"
                             android:text="待办任务"
                             android:textColor="#A52A2A"
-                            android:textSize="20sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rl"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="100dp"
                         android:overScrollMode="never"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:listitem="@layout/item_home_project" />
