--- a/app/src/main/res/layout/activity_site_construction.xml
+++ b/app/src/main/res/layout/activity_site_construction.xml
@@ -16,6 +16,13 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/back" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="0dp"
@@ -24,17 +31,9 @@
             android:gravity="center"
             android:text="钻井"
             android:textColor="@color/white"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:text="保存"
-            android:textColor="@color/white"
             android:textSize="20sp" />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -49,16 +48,9 @@
         android:paddingBottom="10dp">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="当前项目:"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <TextView
+            android:id="@+id/project_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:text="项目 1"
             android:textSize="20sp"
@@ -82,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
 
@@ -94,6 +86,7 @@
 
 
                 <EditText
+                    android:id="@+id/well_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -108,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
 
@@ -120,6 +113,7 @@
 
 
                 <EditText
+                    android:id="@+id/construction_days"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -134,6 +128,7 @@
                     android:textSize="15sp" />
 
                 <EditText
+                    android:id="@+id/well_depth"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -148,6 +143,7 @@
                     android:textSize="15sp" />
 
                 <EditText
+                    android:id="@+id/daily_footage"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -162,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
 
@@ -174,6 +170,7 @@
 
 
                 <EditText
+                    android:id="@+id/stratum"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -189,6 +186,7 @@
 
 
                 <EditText
+                    android:id="@+id/construction_unit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -202,7 +200,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -217,7 +218,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -235,7 +236,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -250,7 +254,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -269,7 +273,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -284,7 +291,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -303,7 +310,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -313,12 +323,26 @@
 
 
                 <EditText
+                    android:id="@+id/recorder"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -338,10 +362,10 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/add_content"
+                android:id="@+id/remark"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/edit_background"
@@ -354,7 +378,34 @@
                 android:padding="5dp"
                 android:scrollbars="vertical" />
 
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_1296db_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="保存"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
+
+            <TextView
+                android:id="@+id/tv_remove"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_a52a2a_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="删除"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 
