--- a/app/src/main/res/layout/activity_well_site_preparation.xml
+++ b/app/src/main/res/layout/activity_well_site_preparation.xml
@@ -16,6 +16,13 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/back" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="0dp"
@@ -24,17 +31,9 @@
             android:gravity="center"
             android:text="井场准备"
             android:textColor="@color/white"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:text="保存"
-            android:textColor="@color/white"
             android:textSize="20sp" />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -48,14 +47,9 @@
         android:paddingRight="16dp"
         android:paddingBottom="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="当前项目:"
-            android:textSize="25sp"
-            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/project_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -82,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp">
 
@@ -94,6 +88,7 @@
 
 
                 <EditText
+                    android:id="@+id/well_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -108,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp">
 
@@ -120,6 +115,7 @@
 
 
                 <EditText
+                    android:id="@+id/headwaters"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -134,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -153,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp">
 
@@ -165,6 +161,7 @@
 
 
                 <EditText
+                    android:id="@+id/electrify"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -180,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -200,7 +197,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp">
 
@@ -212,6 +209,7 @@
 
 
                 <EditText
+                    android:id="@+id/well_pad_leveling"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -226,7 +224,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -245,7 +243,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp">
 
@@ -257,6 +255,7 @@
 
 
                 <EditText
+                    android:id="@+id/environmental_protection_guarantee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -271,7 +270,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -290,7 +289,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp">
 
@@ -302,6 +301,7 @@
 
 
                 <EditText
+                    android:id="@+id/young_crops"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -316,7 +316,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -335,7 +335,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
 
@@ -347,6 +347,7 @@
 
 
                 <EditText
+                    android:id="@+id/recorder"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -354,6 +355,19 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -374,10 +388,10 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/add_content"
+                android:id="@+id/remark"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/edit_background"
@@ -390,7 +404,34 @@
                 android:padding="5dp"
                 android:scrollbars="vertical" />
 
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_1296db_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="保存"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
+
+            <TextView
+                android:id="@+id/tv_remove"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_a52a2a_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="删除"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 
