--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:text="已办任务"
         android:textColor="@color/white"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
@@ -36,13 +36,6 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="当前项目:"
-                android:textSize="22sp"
-                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_name"
@@ -71,6 +64,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/pro_ll">
 
 
@@ -97,12 +91,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/search_ll"
-        app:tr_bottom_height="300dp">
+        app:tr_bottom_height="0dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rl_plan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="200dp"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_home_plan" />
