--- a/app/src/main/res/layout/item_home_plan.xml
+++ b/app/src/main/res/layout/item_home_plan.xml
@@ -26,66 +26,40 @@
 
         <TextView
             android:id="@+id/tv_plan_class"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
             android:text="井位确认"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:text="完成时间:"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/tv_com_time"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="10dp"
-            android:text="2021/10/1  09:30"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:gravity="right"
             android:text="井号:"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tv_well_num"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="10dp"
             android:text="1号井位"
             android:textColor="@color/black"
             android:textSize="15sp" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -98,29 +72,75 @@
 
         <TextView
             android:id="@+id/tv_plan_people"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
             android:text="张伟"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:text="记录时间:"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="完成时间:"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/tv_record_time"
+            android:id="@+id/tv_com_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="10dp"
+            android:minWidth="115dp"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:text="更新人:"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_update_people"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:text="张伟"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="更新时间:"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_update_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="10dp"
-            android:text="2021/10/1  09:30"
+            android:minWidth="115dp"
             android:textColor="@color/black"
             android:textSize="15sp" />
     </LinearLayout>
@@ -131,7 +151,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:gravity="right"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_edit"
@@ -149,9 +170,9 @@
             android:layout_width="50dp"
             android:layout_height="20dp"
             android:layout_marginRight="10dp"
+            android:background="@drawable/greenbox"
             android:gravity="center"
             android:text="提交"
-            android:background="@drawable/greenbox"
             android:textColor="#8FBC8F"
             android:textSize="12sp" />
 
@@ -160,9 +181,9 @@
             android:layout_width="50dp"
             android:layout_height="20dp"
             android:layout_marginRight="10dp"
+            android:background="@drawable/redbox"
             android:gravity="center"
             android:text="删除"
-            android:background="@drawable/redbox"
             android:textColor="#A52A2A"
             android:textSize="12sp" />
 
