--- a/app/src/main/res/layout/activity_achievement_acceptance.xml
+++ b/app/src/main/res/layout/activity_achievement_acceptance.xml
@@ -16,6 +16,13 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/back" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="0dp"
@@ -24,17 +31,8 @@
             android:gravity="center"
             android:text="成果验收"
             android:textColor="@color/white"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:text="保存"
-            android:textColor="@color/white"
             android:textSize="20sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -49,16 +47,9 @@
         android:paddingBottom="10dp">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="当前项目:"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <TextView
+            android:id="@+id/project_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:text="项目 1"
             android:textSize="20sp"
@@ -82,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
 
@@ -94,6 +85,7 @@
 
 
                 <EditText
+                    android:id="@+id/wellName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -108,7 +100,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -122,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -140,7 +135,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -155,7 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -173,7 +171,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -188,7 +189,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -206,7 +207,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -221,7 +225,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp">
 
 
@@ -240,7 +244,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
 
@@ -252,12 +256,25 @@
 
 
                 <EditText
+                    android:id="@+id/recorder"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -277,10 +294,10 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/add_content"
+                android:id="@+id/remark"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/edit_background"
@@ -293,6 +310,34 @@
                 android:padding="5dp"
                 android:scrollbars="vertical" />
 
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_1296db_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="保存"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+
+            <TextView
+                android:id="@+id/tv_remove"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_a52a2a_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="删除"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
         </LinearLayout>
     </ScrollView>
