--- a/app/src/main/res/layout/activity_field_construction_logging.xml
+++ b/app/src/main/res/layout/activity_field_construction_logging.xml
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:text="测井"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
 
     </LinearLayout>
@@ -87,7 +87,7 @@
 
 
                 <EditText
-                    android:id="@+id/well_name"
+                    android:id="@+id/wellName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -121,6 +121,21 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
+
 
                 <TextView
                     android:layout_width="wrap_content"
