--- a/app/src/main/res/layout/activity_site_construction.xml
+++ b/app/src/main/res/layout/activity_site_construction.xml
@@ -86,7 +86,7 @@
 
 
                 <EditText
-                    android:id="@+id/well_name"
+                    android:id="@+id/wellName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -120,6 +120,23 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
+
 
                 <TextView
                     android:layout_width="wrap_content"
