--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -95,6 +95,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
+                                android:id="@+id/already_done_num"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
@@ -122,10 +123,11 @@
                                 android:textStyle="bold" />
 
                             <TextView
+                                android:id="@+id/wait_num"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
-                                android:text="10"
+                                android:text="0"
                                 android:textColor="@color/white"
                                 android:textSize="15sp"
                                 android:textStyle="bold" />
