--- a/app/src/main/res/layout/item_home_plan.xml
+++ b/app/src/main/res/layout/item_home_plan.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:text="井位确认"
+            android:text="井位确定"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
@@ -82,7 +82,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:gravity="right"
             android:text="完成时间:"
@@ -127,7 +127,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:gravity="right"
             android:text="更新时间:"
