--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -49,9 +49,10 @@
 
             <ImageView
                 android:id="@+id/iv_switch"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/project_switch" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/project_switch"
+                android:padding="5dp" />
         </LinearLayout>
 
     </LinearLayout>
