--- a/app/src/main/res/layout/activity_well_site_preparation.xml
+++ b/app/src/main/res/layout/activity_well_site_preparation.xml
@@ -18,10 +18,11 @@
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/back" />
+            android:padding="10dp"
+            android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/tv_title"
