--- a/app/src/main/res/layout/activity_field_construction_logging.xml
+++ b/app/src/main/res/layout/activity_field_construction_logging.xml
@@ -124,7 +124,6 @@
                     android:textSize="15sp" />
 
 
-
             </LinearLayout>
 
             <LinearLayout
@@ -135,7 +134,6 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
-
 
 
                 <TextView
@@ -149,8 +147,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+
                     android:layout_weight="1"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="米"
                     android:textSize="15sp" />
 
                 <TextView
@@ -164,8 +169,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
+                    android:textSize="15sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="米"
                     android:textSize="15sp" />
 
             </LinearLayout>
@@ -191,9 +201,29 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="米"
+                    android:textSize="15sp" />
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
+
 
                 <TextView
                     android:layout_width="wrap_content"
