--- a/app/src/main/res/layout/activity_fracturing_test.xml
+++ b/app/src/main/res/layout/activity_fracturing_test.xml
@@ -259,8 +259,14 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="米"
                     android:textSize="15sp" />
 
                 <TextView
@@ -275,11 +281,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
 
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="米"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -335,6 +345,7 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -369,8 +380,8 @@
                     android:textSize="15sp" />
 
 
-
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -391,9 +402,9 @@
                     android:id="@+id/daily_water_yield"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:layout_marginLeft="20dp"
                     android:textSize="15sp" />
 
                 <TextView
