--- a/app/src/main/res/layout/activity_site_construction.xml
+++ b/app/src/main/res/layout/activity_site_construction.xml
@@ -150,8 +150,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+
                     android:layout_weight="1"
+                    android:textSize="15sp" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="米"
+                    android:layout_marginRight="10dp"
                     android:textSize="15sp" />
 
                 <TextView
