深度厚度输入处理

--- a/app/src/main/res/layout/activity_field_construction_logging_explain.xml
+++ b/app/src/main/res/layout/activity_field_construction_logging_explain.xml
@@ -147,7 +147,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-
+                    android:inputType="numberDecimal"
                     android:layout_weight="1"
                     android:textSize="15sp" />
 
@@ -170,6 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
                 <TextView
                     android:layout_width="wrap_content"
@@ -202,6 +203,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
                 <TextView
                     android:layout_width="wrap_content"
