--- a/app/src/main/res/layout/activity_fracturing_test.xml
+++ b/app/src/main/res/layout/activity_fracturing_test.xml
@@ -260,6 +260,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
                 <TextView
@@ -282,6 +283,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
                 <TextView
