--- a/app/src/main/res/layout/activity_site_construction_input_collection_content.xml
+++ b/app/src/main/res/layout/activity_site_construction_input_collection_content.xml
@@ -147,6 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
                 <TextView
@@ -168,6 +169,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
                 <TextView
@@ -201,6 +203,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
                 <TextView
