--- a/app/src/main/res/layout/activity_core_description.xml
+++ b/app/src/main/res/layout/activity_core_description.xml
@@ -190,6 +190,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
 
                 <TextView
@@ -211,6 +212,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:inputType="numberDecimal"
                     android:textSize="15sp" />
                 <TextView
                     android:layout_width="wrap_content"
