--- a/app/src/main/res/layout/activity_site_construction.xml
+++ b/app/src/main/res/layout/activity_site_construction.xml
@@ -150,7 +150,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-
+                    android:inputType="numberDecimal"
                     android:layout_weight="1"
                     android:textSize="15sp" />
 
