新增三个表

--- a/app/src/main/res/layout/item_home_plan.xml
+++ b/app/src/main/res/layout/item_home_plan.xml
@@ -35,6 +35,7 @@
 
 
         <TextView
+            android:id="@+id/lb_well_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
