--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -141,7 +141,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
+                    android:layout_height="300dp"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/main_background"
                     android:orientation="vertical"
@@ -157,9 +157,18 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/work_grid"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="wrap_content" />
 
+                    <androidx.viewpager.widget.ViewPager
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_marginTop="15dp"
+                        android:background="#333333" />
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/adjust_grid"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
 
